--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "todoapp",
-    "short_name": "todoapp",
+    "name": "list_api_app",
+    "short_name": "list_api_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
